2.1
	- get rid of memcpy.
        - tentatively use rep movsb on x86 and x86_64 (gcc only) for a
          moderate speed improvement.

2.0  Fri Feb 16 23:11:18 CET 2007
	- replaced lzf demo by industrial-strength lzf utility with behaviour
          similar other compression utilities. Thanks for Stefan Traby for
          rewriting it!
        - fix state arg prototype.

1.7  Wed Sep 27 17:29:15 CEST 2006
	- remove bogus "unlzf" patch.
          note to self: never accept well-meant patches.
	- make lzf more robust in presence of padding bytes or sudden eof.

1.6  Fri Jul  7 17:31:26 CEST 2006
	- the lzf example utility will now uncompress if invoked
          as "unlzf" (patch by Scott Feeney).
        - add CHECK_INPUT option that adds more checks for input
          data validity.
        - help applications that do not pass in the correct length
          (such as php) by returning either EINVAL or E2BIG.
        - default HLOG size is now 15 (cpu caches have increased).
        - documentation fixes.

1.51 Thu Apr 14 22:15:46 CEST 2005
	- incorporated C♯ implementation of both the en- and decoder,
          written by "Oren J. Maurice <oymaurice@hazorea.org.il>".
          You can find it in the cs/ subdirectory.
        - make FRST, NEXT IDX overridable if lzf_c.c is directly included
          in the code.

1.5  Tue Mar  8 20:23:23 CET 2005
	- incorporated improvements by Adam D. Moss,
          which includes a new VERY_FAST mode which is
          a bit slower than ULTRA_FAST but much better,
          and enabled it as default.

1.401 Thu Mar  3 18:00:52 CET 2005
	- use cstring in c++, not string.h.
        - change of contact address.

1.4  Wed Dec 15 08:08:49 CET 2004
	- very very slight tuning of the hashing function.

1.3  Thu Mar 25 15:41:17 CET 2004
	- changed license of lzf core code to explicitly allow
          relicensing under the GPLv2.
	- added VPATH support as suggested by Björn Eriksson.

1.2  Mon Dec 29 13:47:28 CET 2003